@@ -1,3 +1,10 @@
+Development Portal (2020-02-29 shi)
+==============================
+Cleanup result groupings
+Display location-id, feature
+Update css
+
+
 Development Portal (2020-02-28 shi)
 ==============================
 Display indicator document-link
